--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
